ITCS: Lambda calculus

--- a/2022/ITCS/notes/notes.tex
+++ b/2022/ITCS/notes/notes.tex
@@ -400,6 +400,10 @@
 	A \emph{mapping reduction} or \emph{many-one reduction} from $Q$ to $Q'$ is a
 	Turing transducer $f$ such that $d\in Q$ iff $f(d)\in Q'$. We write $Q\leq_m Q'$
 	iff there is an $m$-reduction from $Q$ to $Q'$.
+	\begin{itemize}
+		\item Note that the answer may not be modified. In particular, one cannot negate 
+			the answer and thus arrange $d\in Q$ iff $f(d)\not\in Q'$.
+	\end{itemize}
 \end{definition*}
 
 \begin{definition*}[Turing reduction]
@@ -436,7 +440,7 @@
 \begin{definition*}[Co-semi-decidability]
 	A problem $(D,Q)$ is \emph{co-semi-decidable} iff there exists an RM $M$
 	taking input $d\in D$ such that if $d\not\in Q$ then $M$ halts with output
-	$0$ and if $d\in Q$ then $M$ either halts with output $1$ or doe snot halt.
+	$0$ and if $d\in Q$ then $M$ either halts with output $1$ or not at all.
 \end{definition*}
 
 \begin{theorem*}
@@ -681,10 +685,10 @@
 	Moreover, if $M$ halts on every run then $M'$ decides $Q$.
 \end{theorem*}
 
-\begin{definition*}
+\begin{definition*}[NP]
 	A \emph{polynomially bounded non-deterministic Register Machine} is an NRM together with a polynomial
-	$f$ such that, if the size of the input is $n_0$, then every run of the machine halts and
-	rejects after executing at most $f(n_0)$ instructions.
+	$P\in\R[x]$ such that, if the size of the input is $n$, then every run of the machine halts and
+	rejects after executing at most $P(n)$ instructions.
 
 	A problem $Q$ is in \nptime iff it can be computed by some polynomially-bounded NRM.
 \end{definition*}
@@ -709,7 +713,7 @@
 \begin{definition*}[SAT]
 	Let $\phi$ be a boolean formula over a set $X=\{X_1, ..., X_m\}$ of 
 	boolean variables. A satisfying assignment of $\phi$ is a function
-	$X\to\{\bot,\top\}$ that makes $\phi$ true. $\phi$ is satisfiable iff
+	$X\to\F_2$ that makes $\phi$ true. $\phi$ is satisfiable iff
 	there exists a satisfying assignment.
 
 	\texttt{SAT} is the problem $\{\phi : \phi \text{ is satisfiable}\}$.
@@ -793,6 +797,288 @@
 		\item $PH\subseteq\texttt{PSpace}$,
 		\item if $PH=\texttt{PSpace}$ then the polynomially hierarchy collapses.
 	\end{enumerate}	
+\end{theorem*}
+
+\section{Lambda calculus}
+
+\subsection{Untyped lambda calculus}
+
+\begin{definition}[Untyped \lambda-calculus]
+	\label{untyped lcalc}
+	The untyped lambda-calculus is a set of terms $\mathcal{T}$ given by the following rules:
+	\begin{enumerate}[label=L\arabic*.]
+		\item There is a countable set of variables $\mathcal{V}$. Every variable is a term.
+		\item If $x\in\mathcal{V}$ and $t\in\mathcal{T}$ then $(\lambda x.t)\in\mathcal{T}$.
+		\item \label{l3a} If $s,t\in\mathcal{T}$ then $(st)\in\mathcal{T}$.
+	\end{enumerate}	
+	Conventions:
+	\begin{itemize}
+		\item Application is left-associative. 
+		\item Application takes precedence over abstraction.
+		\item For $t\in\mathcal{T}$, we denote by $\mathcal{V}(t)$ the set of variables in $t$.
+		\item For $t\in\mathcal{T}$, we denote by $\mathcal{T}(t)$ the set of subterms of $t$, including $t$.
+	\end{itemize}
+\end{definition}
+
+\begin{definition*}[Free and bound occurences]
+	If $x\in\mathcal{V}(t)$ the occurence is free in $t$ iff $x$ is not inside a subterm 
+	$\lambda x.t'$ of $t$. If $x$ is free in $t'$, it is bound in $\lambda x.t'$.
+\end{definition*}
+
+\subsection{Conversions and reductions}
+
+\begin{definition*}[\alpha-conversion]
+	An \alpha-conversion of a term $t$ is an instance of the following procedure: let 
+	$\lambda x.t'\in \mathcal{T}(t)$, and let $y\in\mathcal{V}$ such that $y$ is not free 
+	in $t'$. Replace the binding occurence of $x$, and every free occurence of $x$ in $t'$
+	by $y$.
+
+	We write $s\to_\alpha t$ if $s$ can be converted to $t$ by a sequence of $\alpha$-conversions.
+\end{definition*}
+
+\begin{definition*}[\beta-reduction]
+	Let $t=(\lambda x.t')s$ be an application $u$ of the \beta-redex $t$ is constructed as follows:
+	\begin{enumerate}
+		\item \alpha-convert $(\lambda x. t')$ to $(\lambda x'.t'')$ such that every bound variable in is 
+			not free in $s$.
+		\item Substitute $s$ for every free occurence of $x'$ in $t''$.
+	\end{enumerate}
+	We write $t\to_\beta u$.
+\end{definition*}
+
+\begin{definition*}[\eta-equivalence]
+	If $x\in\mathcal{V}$ is not free in $f$ then $(\lambda x. f x)$ is \eta-equivalent to $f$. We write 
+	$(\lambda x. f x)\leftrightarrow_\eta f$.	
+\end{definition*}
+
+\begin{definition*}[Evaluation]
+	An evaluation strategy is a rule which, given a lambda-term, decides which $\beta$-redex to reduce 
+	next. 
+
+	Call by name is the following stragey. Let $t\in\mathcal{T}$. Then 
+	\begin{itemize}
+		\item if $t$ is $(\lambda x. u) v$ then \beta-reduce it; otherwise,
+		\item if $t$ is $uv$ then reduce in $u$ if possible.
+	\end{itemize}
+	Call by value is the following stragey. Let $t\in\mathcal{T}$. Then 
+	\begin{itemize}
+		\item if $t$ is $(\lambda x. u) v$ then reduce in $v$ if possible; otherwise $\beta$-reduce it; otherwise,
+		\item if $t$ is $uv$, reduce $u$ if possible.
+	\end{itemize}
+	Full leftmost redution is the strategy that chooses the leftmost redex and reduces it.
+\end{definition*}
+
+\begin{definition*}[Y-combinator]
+	Let $Y$ denote the lambda-term 
+	\begin{align*}
+		Y := \lambda f. (\lambda x. f (x x)) (\lambda x. f (x x)).
+	\end{align*}	
+\end{definition*}
+
+\begin{lemma*}
+	\begin{align*}
+		Y g \to_\beta g (Y g).
+	\end{align*}
+\end{lemma*}
+
+\subsection{Simple types}
+
+\begin{definition}[Types and simply typed syntax]
+	\label{simply typed lcalc}
+	The set of types $\mathcal{O}$ is defined as follows:
+	\begin{itemize}
+		\item Let $\mathcal{O}_0\subseteq\mathcal{O}$ a set of base types.
+		\item If $\sigma,\tau\in\mathcal{O}$ then $(\sigma\to\tau)\in\mathcal{O}$.
+	\end{itemize}	
+	The syntax of simply typed lambda-calculus is identical to \ref{untyped lcalc} except \ref{l3a}
+	is replaced by 
+	\begin{enumerate}[label=L3'.]
+		\item \label{l3b} If $x\in\mathcal{V}$, $t\in\mathcal{T}$, and $\tau\in\mathcal{O}$ then 
+			$(\lambda x:\sigma. t) \in\mathcal{T}$.
+	\end{enumerate} 
+	Convention:
+	\begin{itemize}
+		\item $\sigma\to\tau\to\pi\equiv \sigma\to(\tau\to\pi)$.
+	\end{itemize}
+\end{definition}
+
+\begin{definition*}[Judgement]
+	Let $t\in\mathcal{T}$ and $\tau\in\mathcal{O}$. Then the judgement $t:\tau$ is defined by
+	induction on the structure of terms. If $t$ has a type, we say it is well typed.
+	\begin{itemize}
+		\item Constants are well typed with their assigned type.
+		\item If $t:\tau$ under the assumption that $x:\sigma$, then $(\lambda x. \sigma.t):\sigma\to\tau$.
+		\item If $t:\sigma\to\tau$ and $s:\sigma$ then $(ts):\tau$.
+	\end{itemize}
+\end{definition*}
+
+\begin{definition*}[Proof of judgement]
+	The judgement $\Gamma\vdash t:\tau$ is true iff it can be proved from the following rules and 
+	axioms:
+	\begin{itemize}
+		\item Constant axioms: For any set of assumptions $\Gamma$, and for every constant $c$, there is an axiom \begin{align*}
+			\infer{\Gamma \vdash c:\tau}{}
+		\end{align*}
+		where $\tau$ is the type assigned to $c$ by its definition.
+		\item Variable rule: \begin{align*}
+			\infer{\Gamma\vdash x:\sigma}{x:\sigma \in\Gamma}.
+		\end{align*}
+		\item Abstraction rule: \begin{align*}
+			\infer{\Gamma\vdash \lambda x:\sigma.t:\sigma\to\tau}{\Gamma,x:\sigma\vdash t:\tau}.
+		\end{align*}
+		\item Application rule: \begin{align*}
+			\infer{\Gamma \vdash ts : \tau }{\Gamma \vdash t : \sigma\to\tau \hs \Gamma\vdash s:\sigma}
+		\end{align*}
+	\end{itemize}
+\end{definition*}
+
+\begin{theorem*}[Uniqueness of types]
+	In a given consistent set of assumptions, any simply typed lambda term has at most one type. 
+\end{theorem*}
+
+\begin{theorem*}[III.11]
+	The set of well-typed lambda terms is decidable in \ptime.
+\end{theorem*}
+
+\begin{theorem*}[Type safety]
+	The type of a term remains unchanged under $\alpha$, $\beta$, $\eta$-conversion.
+\end{theorem*}
+
+\begin{theorem*}[Strong normalisation]
+	A well typed term evaluates under \beta-reduction in finitely many steps to a unique irreducible
+	term. If the type is a base type, then the irreducible term is a constant.
+\end{theorem*}
+
+\begin{corollary*}[III.14]
+	Simply typed lambda calculus is not Turing-complete.
+\end{corollary*}
+
+\begin{proposition*}[III.15]
+	Any term containing a self-application cannot be given a simple type.
+\end{proposition*}
+
+\subsection{Recursion}
+
+\begin{definition*}[Recursion for simple types]
+	The syntax in \ref{simply typed lcalc} is extended as follows:
+	\begin{enumerate}[label=L4.]
+		\item If $t\in\mathcal{T}$ then $(\textbf{fix }t)\in\mathcal{T}$.
+	\end{enumerate}	
+	The $\beta$-reduction rules are extended by \begin{align*}
+		\textbf{fix}(\lambda x:\tau.t)\to_\beta t[\textbf{fix}(\lambda x:\tau.t)/x].
+	\end{align*}
+	A new typing rule is added: \begin{align*}
+		\infer{\Gamma \vdash \textbf{fix }t:\tau}{\Gamma \vdash t:\tau\to\tau}.
+	\end{align*}
+\end{definition*}
+
+\begin{definition*}[let]
+	For $x\in\mathcal{V}$, $\tau\in\mathcal{O}$, and $t,t'\in\mathcal{T}$,
+	\begin{align*}
+		(\textbf{let $x:\tau = t$ in $t'$}) := (\lambda x:t.t')t.	
+	\end{align*}
+\end{definition*}
+
+\begin{definition*}[letrec]
+	For $x\in\mathcal{V}$, $\tau\in\mathcal{O}$, and $t,t'\in\mathcal{T}$,
+	\begin{align*}
+		(\textbf{letrec $x:\tau=t$ in $t'$}) := (\textbf{let $x:\tau=$ fix$(\lambda x:\tau.t)$ in $t'$}).	
+	\end{align*}
+\end{definition*}
+
+\subsection{Type variables}
+
+\begin{definition*}[Type variables]
+	There is a set $\mathcal{O}_1\subseteq\mathcal{O}$ of type variables. A type $\sigma\in\mathcal{O}$
+	that contains no type variables is called \emph{closed}.
+
+	A \emph{type substitution} is a function $\mathcal{O}_1\to\mathcal{O}$. If
+	$\mathcal{T}:\mathcal{O}_1\to\mathcal{O}$ and $t\in\mathcal{T}$ then $\mathcal{F} t$ is the result 
+	of applying $\mathcal{F}$ to $t$; similarly, we applyl substitutions to types, assumptions, etc.
+	We specify substitutions explicitly by the notation $[\mathcal{F}(\alpha)/\alpha, 
+	\mathcal{F}(\beta)/\beta,...]$.
+\end{definition*}
+
+\begin{proposition*}[III.20]
+	If $\Gamma\vdash t:\tau$ and $\mathcal{F}$ is a type substitution then $\mathcal{F}\Gamma \vdash \mathcal{F}t:\mathcal{F}\tau$.
+\end{proposition*}
+
+\begin{definition*}[]
+	Let $\sigma,\tau\in\mathcal{T}$. A \emph{type equation} is an equation of the form $\sigma=\tau$. A solution
+	to the equation is a type substitution $\mathcal{F}$ such that $\mathcal{F}\sigma=\mathcal{F}\tau$. A 
+	solution to a set of equations is a substitution that solves all equations simultaneously.
+
+	We modify the typing proof rules:
+	\begin{itemize}
+		\item Constant axiom schema: \begin{align*}
+			\infer{\Gamma\vdash c:\tau}{}
+		\end{align*}
+		which generates the equation $\tau=\tau'$ where $\tau'$ is the type assigned to $c$.
+		\item Variable rule: \begin{align*}
+			\infer{\Gamma\vdash x:\sigma}{x:\sigma'\in\Gamma}
+		\end{align*}
+		which generates the equation $\sigma'=\sigma$
+		\item Abstraction rule: \begin{align*}
+			\infer{\Gamma\vdash\lambda x.t:\sigma}{\Gamma,x:\alpha\vdash t:\beta}
+		\end{align*}
+		which generates the equation $\alpha\to\beta = \sigma$ where $\alpha,\beta$ are new type variables j.
+		\item Application rule: \begin{align*}
+			\infer{\Gamma\vdash ts:\tau}{\Gamma\vdash t:\alpha\to\tau\hs \Gamma\vdash s:\alpha}
+		\end{align*}
+		where $\alpha$ is a new type variable.
+	\end{itemize}
+	We say $t:\tau$ iff there is a proof-tree for some $\vdash t:\tau'$ and there is a solution $\mathcal{F}$
+	for the set of equations generated by the pfoorf tree, such that $\tau=\mathcal{F}\tau'$.
+\end{definition*}
+
+\begin{proposition*}[III.22]
+	Given a set of type equations, we can in linear time either find a solution or show that no solutioin exists.
+
+	Moreover, we can find the most general solution, i.e. a solution $\mathcal{F}$ such that any other 
+	solution $\mathcal{F}'$ is equal to $\mathcal{F}''$ applied to $\mathcal{F}$ for some $\mathcal{F}''$.
+\end{proposition*}
+
+\subsection{Polymorphism}
+
+\begin{definition*}[Let-polymorphic lambda calculus]
+	The let-polymorphic lambda-calculus extends the untyped lambda calculus together with the 
+	\textbf{fix} constructor and any other primitve terms, with the following term construction:
+	\begin{enumerate}[label=L5.]
+		\item If $x\in\mathcal{V}$ and $t,t'\in\mathcal{T}$ then $(\textbf{let $x=t$ in $t'$})\in\mathcal{T}$.
+	\end{enumerate}
+	The \beta-reduction rule for this term is \begin{align*}
+		\textbf{let $x=t$ in $t'\to_\beta t'[t/x]$}.
+	\end{align*}
+\end{definition*} 
+
+\begin{definition*}[let proof rules]
+	If $\tau\in\mathcal{O}$ and $\alpha,\beta\in\mathcal{O}_1$ then $\forall \alpha, \beta, ... .\tau$ 
+	is a \emph{type scheme}, and the variables are bound in it. The type scheme $\forall.\tau$ with
+	no bound variables is identified with the type $\tau$.
+	
+	Assumptions are extended to be $x:\tau$ where $\tau$ is a type scheme, and in the following $\sigma,\tau$
+	range over type schemes.
+
+	Let $\Sigma$ be a set of assumptions and let $\sigma$ be a type scheme. $\bar\Gamma(\sigma)$ denotes 
+	the generalisation of $\sigma$ with respect to $\Gamma$, which is defined to be the result of binding 
+	with $\forall$ all type variables in $\sigma$ that do not occur free in $\Gamma$.
+
+	If $\sigma,\tau\in\mathcal{O}$ we say $\tau$ specialises $\sigma$, written $\sigma\sqsubseteq \tau$ 
+	iff $\sigma$ has the form $\forall \alpha, \beta, ... .\sigma'$ and $\tau$ is the result of subsituting 
+	types for some of the $\alpha,\beta, ...$ in $\sigma'$, and removing them from the bound variable list.
+
+	The typing rule for \textbf{let} expressions is 
+	\begin{align*}
+		\infer{\Gamma\vdash \textbf{let $x=t$ in $t':\tau$}}{\Gamma\vdash t:\sigma\hs \Gamma,x:\bar\Gamma(\sigma)\vdash t':\tau}
+	\end{align*}
+	and the typing rule for variables and assumptions is modified to be 
+	\begin{align*}
+		\infer{\Gamma \vdash x:\tau}{x:\sigma \in \Gamma\hs \sigma\sqsubseteq \tau}.
+	\end{align*}
+\end{definition*}
+
+\begin{theorem*}[III.27]
+	Type-checking let-polymorphic lambda-calculus is \texttt{ExpTime}-complete.
 \end{theorem*}
 
 \end{document}
